# pc_p2-esp32-client_server_alarm

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/client/: client.ino
src/server/: server.py
src/server/controllers/: login_blueprint.py
src/server/database/: abstract_db.py  database.json  json_db.py
src/server/mail/: mail_to.py
src/server/models/: user.py
src/server/services/: send_email.py
